[package]
name = "web"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies.runner]
path = "../runner"

[dependencies.files]
path = "../files"

[dependencies]
clap = "2.18.0"
iron = "0.4.0"
mount = "0.2.1"
router = "0.4.0"
params = "0.5.0"
rand = "0.3.14"
plugin = "0.2.6"
staticfile = "0.3.1"
